@@ -158,6 +158,7 @@ ad6b742ed77ecbb1833d53db4ffe93ddb372325f assets\createbigcannons\blockstates\shr
 10a7c1c680e6b61fb5b5dd2f21ee4ed635c5f2fd data\createbigcannons\loot_tables\blocks\incomplete_nethersteel_screw_breech.json
 ee48da3a9f82e46ab6cfb52855d5709219e17c4f data\createbigcannons\tags\items\sheet_copper.json
 aaa183286951715762565e7ef18aca718dcaf4cb assets\createbigcannons\models\block\he_shell.json
+afeb47bb7fedb55b653fc87dac7593385c876d70 data\create\tags\blocks\safe_nbt.json
 edf0c0bb93d3e3c50f458121b80031ee3337885e assets\createbigcannons\models\block\bronze_autocannon_breech_handle.json
 22957aaca9620f936c868405e05f33e4242353e3 assets\createbigcannons\blockstates\cannon_carriage.json
 35939f861ce0ab99fe1881c342f0db92706dab78 data\createbigcannons\recipes\compacting\forge_cast_iron_ingot.json
